<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF"
    tools:context="com.example.com.record07150919.MainActivity">
    <LinearLayout
        android:orientation="horizontal"
        android:background="#FFFFFF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/mEditText"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:background="#FFFFFF"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/mButton_mc"
            android:text="@string/mc"
            android:layout_weight="1"
            android:layout_width="0dip"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/mButton_mPlus"
            android:text="@string/mc"
            android:layout_weight="1"
            android:layout_width="0dip"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/mButton_mMinus"
            android:text="@string/mMinus"
            android:layout_weight="1"
            android:layout_width="0dip"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/mButton_mr"
            android:text="@string/mr"
            android:layout_weight="1"
            android:layout_width="0dip"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:background="#fff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/mButton_C"
            android:text="@string/C"
            android:layout_weight="1"
            android:layout_width="0dip"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/mButton_PlusAndMinusLog"
            android:text="@string/PlusAndMinusLog"
            android:layout_weight="1"
            android:layout_width="0dip"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/mButton_DivisionLog"
            android:text="@string/DivisionLog"
            android:layout_weight="1"
            android:layout_width="0dip"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/mButton_MultiplicationLog"
            android:text="@string/C"
            android:layout_weight="1"
            android:layout_width="0dip"
            android:layout_height="wrap_content" />

    </LinearLayout>
    <!--3-->
    <LinearLayout
        android:orientation="horizontal"
        android:background="#fff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/mButton_Number7"
            android:text="@string/Number7"
            android:layout_weight="1"
            android:layout_width="0dip"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/mButton_Number8"
            android:text="@string/Number8"
            android:layout_weight="1"
            android:layout_width="0dip"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/mButton_Number9"
            android:text="@string/Number9"
            android:layout_weight="1"
            android:layout_width="0dip"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/mButton_SubtractionLog"
            android:text="@string/SubtractionLog"
            android:layout_weight="1"
            android:layout_width="0dip"
            android:layout_height="wrap_content" />

    </LinearLayout>
    <!--4-->
    <LinearLayout
        android:orientation="horizontal"
        android:background="#fff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/mButton_Number4"
            android:text="@string/Number7"
            android:layout_weight="1"
            android:layout_width="0dip"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/mButton_Number5"
            android:text="@string/Number8"
            android:layout_weight="1"
            android:layout_width="0dip"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/mButton_Number6"
            android:text="@string/Number9"
            android:layout_weight="1"
            android:layout_width="0dip"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>
